--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -60,7 +60,7 @@
         <div class="brand">
             <div class="container-fluid">
                 <div class="brand-slider">
-                    {% for brand in brands %}
+                    {% for brand in brand %}
                     <div class="brand-item"><img src="{{ brand.image.url }}" style="height:60%; width:70%;" alt="Brand image"></div>
                     {% endfor %}
                 </div>
