--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -30,16 +30,14 @@
             <div class="container-fluid">
                 <div class="row">
                     {% if user.is_authenticated %}
-                    {% for user in users %}
-                    <div class="col-sm-6">
-                        <i class="fas fa-envelope"></i>
-                        {{ user.email }}
-                    </div>
-                    <div class="col-sm-6">
+                    <div class="col-sm-6" style="text-align:center;">
                         <i class="fas fa-user-circle"></i>
-                        {{ user.username}}
+                        <h6>username: {{ user.username}}</h6>
                     </div>
-                    {% endfor %}
+                    <div class="col-sm-6" style="align-text:center;">
+                        <i class="fas fa-envelope"></i>
+                        <h6>email: {{ user.email }}</h6>
+                    </div>
                     {% endif %}
                 </div>
             </div>
